Closed Bug 1615014 Opened 5 years ago Closed 5 years ago

ThreadSanitizer: data race [@ get] vs. [@ assign_assuming_AddRef] on mPerformanceCounter

Categories

(Core :: DOM: Workers, defect, P3)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla76
Tracking Status
firefox74 --- wontfix
firefox75 --- wontfix
firefox76 --- fixed

People

(Reporter: decoder, Assigned: perry)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

The attached crash information was detected while running CI tests with ThreadSanitizer on mozilla-central revision 11c9c5ce3955.

This looks like a race on initializing mPerformanceCounter vs. using it.

General information about TSan reports

Why fix races?

Data races are undefined behavior and can cause crashes as well as correctness issues. Compiler optimizations can cause racy code to have unpredictable and hard-to-reproduce behavior.

Rating

If you think this race can cause crashes or correctness issues, it would be great to rate the bug appropriately as P1/P2 and/or indicating this in the bug. This makes it a lot easier for us to assess the actual impact that these reports make and if they are helpful to you.

False Positives / Benign Races

Typically, races reported by TSan are not false positives [1], but it is possible that the race is benign. Even in this case it would be nice to come up with a fix if it is easily doable and does not regress performance. Every race that we cannot fix will have to remain on the suppression list and slows down the overall TSan performance. Also note that seemingly benign races can possibly be harmful (also depending on the compiler, optimizations and the architecture) [2][3].

[1] One major exception is the involvement of uninstrumented code from third-party libraries.
[2] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[3] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf

Suppressing unfixable races

If the bug cannot be fixed, then a runtime suppression needs to be added in mozglue/build/TsanOptions.cpp. The suppressions match on the full stack, so it should be picked such that it is unique to this particular race. The bug number of this bug should also be included so we have some documentation on why this suppression was added.

Christian, do you have an rr trace for this we could feed into pernosco?

Flags: needinfo?(choller)

Looking at this assert it seems that we don't expect the WorkerPrivate to be used from different threads, what instead seems to happen here.

:asuth, some more input for "ARCH::worker-event-queues-cleanup" ?

Flags: needinfo?(bugmail)

(In reply to Jens Stutte [:jstutte] from comment #2)

Christian, do you have an rr trace for this we could feed into pernosco?

I'm not sure if TSan would even work with rr in the first place. It is possible to reproduce this though by running dom/websocket/tests/test_worker_websocket5.html.

Flags: needinfo?(choller)
Flags: needinfo?(jstutte)

A defect with information so marking this P3 for now.

Priority: -- → P3

Hi Perry, is this eventually wanted by design?

Flags: needinfo?(perry)
Flags: needinfo?(jstutte)
Flags: needinfo?(bugmail)

Yeah, it looks like it.

Assignee: nobody → perry
Flags: needinfo?(perry)

WorkerThreadPrimaryRunnable possibly indirectly creates a
SendInitBackgroundRunnable (runs on the main thread), which causes a data race
with CompileScriptRunnable (runs on the worker thread) by having an
unsynchronized read/write of WorkerPrivate::mPerformanceCounter.

Attachment #9134335 - Attachment description: Bug 1615014 - protect mPerformanceCounter r?#dom-workers-and-storage-reviewers → Bug 1615014 - ensure performance storage/counter is set before being read r?#dom-workers-and-storage-reviewers
Pushed by pjiang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/52798009e73a ensure performance storage/counter is set before being read r=dom-workers-and-storage-reviewers,asuth
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76

Since the status are different for nightly and release, what's the status for beta?
For more information, please visit auto_nag documentation.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: